SERVER-5553 Remove a heap allocation from the log event encoder.

The goal is to eventually have a logging path that is truly safe to
use in a signal handler.  This patch advances the cause by removing
the heap allocation caused by returning a string in the date formatters.