src/mongo/util/time_support_test.cpp
@@ -53,7 +53,7 @@ namespace {
         ASSERT_EQUALS(std::string("2013-02-20T18:29:11Z"), timeToISOString(1361384951));
     }
 
-    TEST(TimeFormatting, DateAsISO8601UTC) {
+    TEST(TimeFormatting, DateAsISO8601UTCString) {
         ASSERT_EQUALS(std::string("1970-01-01T00:00:00.000Z"),
                       dateToISOStringUTC(Date_t(0)));
         ASSERT_EQUALS(std::string("1970-06-30T01:06:40.981Z"),
@@ -65,7 +65,7 @@ namespace {
                       dateToISOStringUTC(Date_t(1361384951100ULL)));
     }
 
-    TEST(TimeFormatting, DateAsISO8601Local) {
+    TEST(TimeFormatting, DateAsISO8601LocalString) {
         ASSERT_EQUALS(std::string("1969-12-31T19:00:00.000-0500"),
                       dateToISOStringLocal(Date_t(0)));
         ASSERT_EQUALS(std::string("1970-06-29T21:06:40.981-0400"),
@@ -77,7 +77,7 @@ namespace {
                       dateToISOStringLocal(Date_t(1361384951100ULL)));
     }
 
-    TEST(TimeFormatting, DateAsCtime) {
+    TEST(TimeFormatting, DateAsCtimeString) {
         ASSERT_EQUALS(std::string("Wed Dec 31 19:00:00.000"), dateToCtimeString(Date_t(0)));
         ASSERT_EQUALS(std::string("Mon Jun 29 21:06:40.981"),
                       dateToCtimeString(Date_t(15556000981ULL)));
@@ -86,6 +86,48 @@ namespace {
                           dateToCtimeString(Date_t(2781455351100ULL)));
         ASSERT_EQUALS(std::string("Wed Feb 20 13:29:11.100"),
                       dateToCtimeString(Date_t(1361384951100ULL)));
+    }
+
+    static std::string stringstreamDate(void (*formatter)(std::ostream&, Date_t), Date_t date) {
+        std::ostringstream os;
+        formatter(os, date);
+        return os.str();
+    }
+
+    TEST(TimeFormatting, DateAsISO8601UTCStream) {
+        ASSERT_EQUALS(std::string("1970-01-01T00:00:00.000Z"),
+                      stringstreamDate(outputDateAsISOStringUTC, Date_t(0)));
+        ASSERT_EQUALS(std::string("1970-06-30T01:06:40.981Z"),
+                      stringstreamDate(outputDateAsISOStringUTC, Date_t(15556000981ULL)));
+        if (!isTimeTSmall)
+            ASSERT_EQUALS(std::string("2058-02-20T18:29:11.100Z"),
+                          stringstreamDate(outputDateAsISOStringUTC, Date_t(2781455351100ULL)));
+        ASSERT_EQUALS(std::string("2013-02-20T18:29:11.100Z"),
+                      stringstreamDate(outputDateAsISOStringUTC, Date_t(1361384951100ULL)));
+    }
+
+    TEST(TimeFormatting, DateAsISO8601LocalStream) {
+        ASSERT_EQUALS(std::string("1969-12-31T19:00:00.000-0500"),
+                      stringstreamDate(outputDateAsISOStringLocal, Date_t(0)));
+        ASSERT_EQUALS(std::string("1970-06-29T21:06:40.981-0400"),
+                      stringstreamDate(outputDateAsISOStringLocal, Date_t(15556000981ULL)));
+        if (!isTimeTSmall)
+            ASSERT_EQUALS(std::string("2058-02-20T13:29:11.100-0500"),
+                          stringstreamDate(outputDateAsISOStringLocal, Date_t(2781455351100ULL)));
+        ASSERT_EQUALS(std::string("2013-02-20T13:29:11.100-0500"),
+                      stringstreamDate(outputDateAsISOStringLocal, Date_t(1361384951100ULL)));
+    }
+
+    TEST(TimeFormatting, DateAsCtimeStream) {
+        ASSERT_EQUALS(std::string("Wed Dec 31 19:00:00.000"),
+                      stringstreamDate(outputDateAsCtime, Date_t(0)));
+        ASSERT_EQUALS(std::string("Mon Jun 29 21:06:40.981"),
+                      stringstreamDate(outputDateAsCtime, Date_t(15556000981ULL)));
+        if (!isTimeTSmall)
+            ASSERT_EQUALS(std::string("Wed Feb 20 13:29:11.100"),
+                          stringstreamDate(outputDateAsCtime, Date_t(2781455351100ULL)));
+        ASSERT_EQUALS(std::string("Wed Feb 20 13:29:11.100"),
+                      stringstreamDate(outputDateAsCtime, Date_t(1361384951100ULL)));
     }
 
     TEST(TimeParsing, DateAsISO8601UTC) {
